More fixes to align main grid on guestpage

--- a/grails-app/assets/stylesheets/pashion/pashion.scss
+++ b/grails-app/assets/stylesheets/pashion/pashion.scss
@@ -431,3 +431,9 @@ filters-city {
 #looks > div > .grid-row:first-child {
   margin-top: 1em; 
 }
+.guestpage-filters {
+  margin-top: 3rem; 
+  padding-bottom: 1rem; 
+  overflow:hidden; 
+  min-height: 80px; 
+}
